Fixed styling on small devices

--- a/source/scss/drinkingAmountForm.scss
+++ b/source/scss/drinkingAmountForm.scss
@@ -33,13 +33,14 @@
 		}
 
 		.boozeInput{
-			float: right;
+			display: block;
 			padding: 4px;
 			border: 1px solid grey;
 			background: white;
-			width: 40px;
+			width: 40%;
+			margin: 10px auto;
 			font-size: 16px;
-			margin: 8px 0 0 0;
+			
 		}
 	}
 	.readerCountryInput{
