--- a/source/scss/drinkingAmountResults.scss
+++ b/source/scss/drinkingAmountResults.scss
@@ -140,6 +140,7 @@
 		    position: absolute;
 		    height: 44px;
 		    bottom: 10px;
+		    width: 40%;
 		}
 		.bottomMarker span {
 		    padding-top: 12px;
